EncoderConfiguration manage 95%. Read TODOs

--- a/chronojump.csproj
+++ b/chronojump.csproj
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -922,6 +921,7 @@
     <Compile Include="src\oldCodeNeedToDBConvert\sqlite\session.cs" />
     <Compile Include="src\sqlite\country.cs" />
     <Compile Include="src\sqlite\encoder.cs" />
+    <Compile Include="src\sqlite\encoderConfiguration.cs" />
     <Compile Include="src\sqlite\event.cs" />
     <Compile Include="src\sqlite\executeAuto.cs" />
     <Compile Include="src\sqlite\jump.cs" />
@@ -1000,6 +1000,7 @@
     <Compile Include="src\gui\encoderOverview.cs" />
     <Compile Include="src\threshold.cs" />
     <Compile Include="src\gui\dialogThreshold.cs" />
+    <Compile Include="src\sqlite\encoderConfiguration.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="src\" />
