--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -96,6 +96,7 @@ SOURCES = \
 	sqlite/preferences.cs\
 	sqlite/session.cs\
 	sqlite/encoder.cs\
+	sqlite/encoderConfiguration.cs\
 	sqlite/executeAuto.cs\
 	sqlite/jump.cs\
 	sqlite/jumpRj.cs\
