--- a/configure.ac
+++ b/configure.ac
@@ -163,6 +163,7 @@ chronopic-tests/Makefile
 src/Makefile
 src/Mini/Makefile
 src/chronojump-importer/Makefile
+rfid/Makefile
 po/Makefile.in
 chronojump_server/Makefile
 encoder/Makefile
