--- a/chronojump.csproj
+++ b/chronojump.csproj
@@ -1113,6 +1113,7 @@
     <Compile Include="src\encoderCaptureInertialBG.cs" />
     <Compile Include="src\gui\chronojumpIcons.cs" />
     <Compile Include="src\sprint.cs" />
+    <Compile Include="src\gui\forceSensor.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="src\" />
