sprint.R separated in three files

--- a/r-scripts/Makefile.am
+++ b/r-scripts/Makefile.am
@@ -1,3 +1,5 @@
 rscriptsdir = @datadir@/@PACKAGE@/r-scripts
 
-dist_rscripts_DATA = sprint.R
+dist_rscripts_DATA = sprintUtil.R \
+		     sprintPhotocells.R \
+		     sprintRadar.R
