--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -391,6 +391,7 @@ RESOURCES = \
 	../images/md/ic_keyboard_arrow_up_blue_24dp_1x.png,image_up.png \
 	../images/md/ic_keyboard_arrow_down_blue_24dp_1x.png,image_down.png \
 	../images/md/inertial_rolled.png,inertial_rolled.png \
+	../images/md/inertial_half_rolled.png,inertial_half_rolled.png \
 	../images/md/inertial_extended.png,inertial_extended.png \
 	../images/chronojump_icon.png,chronojump_icon.png \
 	../images/chronojump_icon_graph.png,chronojump_icon_graph.png \
