--- a/r-scripts/Makefile.am
+++ b/r-scripts/Makefile.am
@@ -1,5 +1,6 @@
 rscriptsdir = @datadir@/@PACKAGE@/r-scripts
 
-dist_rscripts_DATA = sprintUtil.R \
+dist_rscripts_DATA = maximumIsometricForce.R \
+		     sprintUtil.R \
 		     sprintPhotocells.R \
 		     sprintRadar.R
