--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -406,6 +406,7 @@ RESOURCES = \
 	../images/reaction_time_menu.png,reaction_time_menu.png \
 	../images/pulse_menu.png,pulse_menu.png \
 	../images/multichronopic_menu.png,multichronopic_menu.png \
+	../images/force_sensor_menu.png,force_sensor_menu.png \
 	../images/finish.png,finish.png \
 	../images/gtk-cancel.png,gtk-cancel.png \
 	../images/gtk-zoom-fit.png,gtk-zoom-fit.png \
