Call to maximumIsometricForce.R 50% done

--- a/chronojump.csproj
+++ b/chronojump.csproj
@@ -1117,6 +1117,7 @@
     <Compile Include="src\gui\sprint.cs" />
     <Compile Include="src\sqlite\trigger.cs" />
     <Compile Include="src\trigger.cs" />
+    <Compile Include="src\forceSensor.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="src\" />
