--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -59,6 +59,7 @@ src/execute/pulse.cs
 src/execute/reactionTime.cs
 src/execute/run.cs
 src/exportSession.cs
+src/forceSensor.cs
 src/gui/chronojump.cs
 src/gui/chronopic.cs
 src/gui/chronopicRegister.cs
