chronopicRegister win nicer. treeview -> table.

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -50,6 +50,7 @@ src/chronojump.cs
 src/chronojumpImporter.cs
 src/chronopic.cs
 src/chronopic2016.cs
+src/chronopicRegister.cs
 src/constants.cs
 src/encoder.cs
 src/execute/event.cs
