encoder concentric/exc-con muscle arm images

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -447,6 +447,8 @@ RESOURCES = \
 	../images/chronojump-logo-transparent.png,chronojump-logo-transparent.png \
 	../images/chronojump-logo-2013_320.png,chronojump-logo-2013_320.png \
 	../images/chronojump-logo-2013.png,chronojump-logo-2013.png \
+	../images/muscle-concentric.png,muscle-concentric.png \
+	../images/muscle-excentric-concentric.png,muscle-excentric-concentric.png \
 	../images/encoder-analyze-individual-current-set.png,encoder-analyze-individual-current-set.png \
 	../images/encoder-analyze-individual-current-session.png,encoder-analyze-individual-current-session.png \
 	../images/encoder-analyze-individual-all-sessions.png,encoder-analyze-individual-all-sessions.png \
