Nicer chronopicRegister win

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -382,6 +382,7 @@ RESOURCES = \
 	../images/md/ic_insert_chart_blue_24dp_1x.png,image_analyze.png \
 	../images/md/ic_fast_forward_blue_24dp_1x.png,image_sprint.png \
 	../images/md/ic_developer_board_blue_24dp_1x.png,image_chronopic_connect.png \
+	../images/md/ic_developer_board_blue_24dp_2x.png,image_chronopic_connect_big.png \
 	../images/md/ic_person_blue_24dp_1x.png,image_person.png \
 	../images/md/ic_cached_blue_24dp_1x.png,image_recalculate.png \
 	../images/md/ic_delete_blue_24dp_1x.png,stock_delete.png \
