--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -16,6 +16,7 @@ glade/dialog_calendar.glade
 glade/dialog_help_ports.glade
 glade/dialog_image_test.glade
 glade/dialog_message.glade
+glade/dialog_person_popup.glade
 glade/dialog_server_stats.glade
 glade/dialog_threshold.glade
 glade/edit_event.glade
