--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -501,6 +501,7 @@ RESOURCES = \
 	../images/encoder-rotary-axis-inertial.png,encoder-rotary-axis-inertial.png \
 	../images/encoder-rotary-axis-inertial-lateral.png,encoder-rotary-axis-inertial-lateral.png \
 	../images/encoder-rotary-axis-inertial-mov-pulley.png,encoder-rotary-axis-inertial-mov-pulley.png \
+	../images/encoder-rotary-axis-inertial-mov-pulley-lateral.png,encoder-rotary-axis-inertial-mov-pulley-lateral.png \
 	../images/encoder-calcule-im.png,encoder-calcule-im.png \
 	../images/encoder-rotary-axis-on-fixed-pulley-with-weighted-moving-pulley.png,encoder-rotary-axis-on-fixed-pulley-with-weighted-moving-pulley.png \
 	../images/inertial-start.png,inertial-start.png \
