--- a/chronojump.csproj
+++ b/chronojump.csproj
@@ -1174,7 +1174,7 @@
     <Compile Include="src\forceSensor.cs" />
     <Compile Include="src\sqlite\forceSensor.cs" />
     <Compile Include="src\gui\trigger.cs" />
-    <Compile Include="src\rfid.cs" />
+    <Compile Include="src\RFID.cs" />
     <Compile Include="src\gui\dialogPersonPopup.cs" />
   </ItemGroup>
   <ItemGroup>
