--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -98,6 +98,7 @@ src/gui/sprint.cs
 src/gui/stats.cs
 src/executeProcess.cs
 src/json.cs
+src/jumpsProfile.cs
 src/jumpType.cs
 src/Mini/chronojump_mini.cs
 src/pulseType.cs
