--- a/chronojump.csproj
+++ b/chronojump.csproj
@@ -316,6 +316,9 @@
     <EmbeddedResource Include="images\encoder-analyze-1RM.png">
       <LogicalName>encoder-analyze-1RM.png</LogicalName>
     </EmbeddedResource>
+    <EmbeddedResource Include="images\encoder-linear-blue.png">
+      <LogicalName>encoder-linear-blue.png</LogicalName>
+    </EmbeddedResource>
     <EmbeddedResource Include="images\encoder-analyze-accel.png">
       <LogicalName>encoder-analyze-accel.png</LogicalName>
     </EmbeddedResource>
@@ -580,8 +583,20 @@
     <EmbeddedResource Include="images\muscle-concentric.png">
       <LogicalName>muscle-concentric.png</LogicalName>
     </EmbeddedResource>
+    <EmbeddedResource Include="images\muscle-excentric-concentric.png">
+      <LogicalName>muscle-excentric-concentric.png</LogicalName>
+    </EmbeddedResource>
     <EmbeddedResource Include="images\extra-mass.png">
       <LogicalName>extra-mass.png</LogicalName>
+    </EmbeddedResource>
+    <EmbeddedResource Include="images\laterality-both.png">
+      <LogicalName>laterality-both.png</LogicalName>
+    </EmbeddedResource>
+    <EmbeddedResource Include="images\laterality-left.png">
+      <LogicalName>laterality-left.png</LogicalName>
+    </EmbeddedResource>
+    <EmbeddedResource Include="images\laterality-right.png">
+      <LogicalName>laterality-right.png</LogicalName>
     </EmbeddedResource>
     <EmbeddedResource Include="images\line_person_max_all_sessions.png">
       <LogicalName>line_person_max_all_sessions.png</LogicalName>
