--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -91,6 +91,7 @@ src/gui/repetitiveConditions.cs
 src/gui/report.cs
 src/gui/run.cs
 src/gui/runType.cs
+src/gui/sendLog.cs
 src/gui/server.cs
 src/gui/session.cs
 src/gui/splash.cs
