Cleaned code on today restTime commits

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -26,6 +26,7 @@ SOURCES = \
 	gui/jump.cs\
 	gui/jumpsProfile.cs\
 	gui/jumpType.cs\
+	gui/restTime.cs\
 	gui/run.cs\
 	gui/runType.cs\
 	gui/reactionTime.cs\
