--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -76,6 +76,7 @@ src/gui/evaluator.cs
 src/gui/event.cs
 src/gui/eventExecute.cs
 src/gui/executeAuto.cs
+src/gui/forceSensor.cs
 src/gui/genericWindow.cs
 src/gui/helpPorts.cs
 src/gui/jump.cs
