force sensor Added tare/calibrate images

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -407,6 +407,7 @@ RESOURCES = \
 	../images/md/ic_person_outline_blue_24dp_1x.png,image_person_outline.png \
 	../images/md/ic_people_outline_blue_24dp_1x.png,image_group_outline.png \
 	../images/md/ic_weekend_blue_24dp_1x.png,image_rest.png \
+	../images/md/ic_looks_zero_blue_24dp_1x.png,zero.png \
 	../images/md/ic_looks_one_blue_24dp_1x.png,one.png \
 	../images/md/ic_add_circle_blue_24dp_1x.png,image_add_test.png \
 	../images/md/ic_all_inclusive_blue_24dp_1x.png,cont.png \
