--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -432,6 +432,7 @@ RESOURCES = \
 	../images/md/calibrate.png,calibrate.png \
 	../images/md/ic_folder_check_blue_24dp_1x.png,folder_check.png \
 	../images/md/ic_zoom_blue_24dp_1x.png,zoom.png \
+	../images/md/trigger_2x.png,image_encoder_triggers.png \
 	../images/chronojump_icon.png,chronojump_icon.png \
 	../images/chronojump_icon_graph.png,chronojump_icon_graph.png \
 	../images/stock_right.png,stock_right.png \
