Encoder rhythm code moved to encoderRhythm.cs

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -142,6 +142,7 @@ SOURCES = \
 	encoder.cs\
 	encoderCapture.cs\
 	encoderCaptureInertialBG.cs\
+	encoderRhythm.cs\
 	encoderRProc.cs\
 	executeAuto.cs\
 	event.cs\
