--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -54,6 +54,7 @@ src/chronopic2016.cs
 src/chronopicRegister.cs
 src/constants.cs
 src/encoder.cs
+src/encoderRhythm.cs
 src/execute/event.cs
 src/execute/jump.cs
 src/execute/multiChronopic.cs
