DB: 1.57 Compujump upload data (if no network) stored on temp tables

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -122,6 +122,7 @@ SOURCES = \
 	sqlite/reactionTime.cs\
 	sqlite/multiChronopic.cs\
 	sqlite/event.cs\
+	sqlite/json.cs\
 	sqlite/sport.cs\
 	sqlite/speciallity.cs\
 	sqlite/trigger.cs\
